--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,18 +1,23 @@
-name: Build and Deploy
-on: [push]
-permissions:
-  contents: write
+name: Deploy to GitHub Pages
+
+on:
+  push:
+    branches: [ main ]
+
 jobs:
   build-and-deploy:
-    concurrency: ci-${{ github.ref }} # Recommended if you intend to make multiple deployments in quick succession.
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
+      - name: Build your website
+        run: echo "Build your website here"
+        # Replace with your build commands
 
-
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v1
         with:
-          folder: . # The folder the action should deploy.
+          folder: .
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          publish-dir: .  # Replace with your build output directory
